<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/showMapBut"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="378dp"
        android:layout_height="196dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">


        <Button
            android:id="@+id/showMapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_map"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:background="#60389F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgSuggestion1"
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:adjustViewBounds="false"
            android:baselineAlignBottom="false"
            android:contentDescription="@string/helsinki"
            android:onClick="onClickCitySuggestion1"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toStartOf="@+id/imgSuggestion2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/helsinki_city"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imgSuggestion3"
            android:layout_width="150dp"
            android:layout_height="125dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:adjustViewBounds="false"
            android:baselineAlignBottom="false"
            android:contentDescription="@string/tokyo"
            android:onClick="onClickCitySuggestion3"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imgSuggestion4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgSuggestion1"
            app:srcCompat="@drawable/tokyo_city"
            tools:ignore="ImageContrastCheck,ImageContrastCheck" />

        <ImageView
            android:id="@+id/imgSuggestion4"
            android:layout_width="150dp"
            android:layout_height="125dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:adjustViewBounds="false"
            android:baselineAlignBottom="false"
            android:contentDescription="@string/dhaka"
            android:onClick="onClickCitySuggestion4"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgSuggestion3"
            app:layout_constraintTop_toBottomOf="@+id/imgSuggestion2"
            app:srcCompat="@drawable/dhaka_city"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imgSuggestion2"
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:adjustViewBounds="false"
            android:baselineAlignBottom="false"
            android:contentDescription="@string/paris"
            android:onClick="onClickCitySuggestion2"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgSuggestion1"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/paris_city"
            tools:ignore="ImageContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="#A89696"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/txtInputCityName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_city_name"
            android:inputType="textPersonName"
            android:paddingStart="0dp"
            android:paddingEnd="100dp"
            android:textColor="#101010"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btnGetWeatherAtMyLocation"
            app:layout_constraintEnd_toStartOf="@+id/btnSearchByCityName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnGetWeatherAtMyLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:onClick="onClickBtnOpenWeatherAtMyLocation"
            android:text="@string/get_at_my_location"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInputCityName" />

        <Button
            android:id="@+id/btnSearchByCityName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:onClick="onClickBtnSearchWeatherByCityName"
            android:text="@string/btn_search_by_city_name"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btnGetWeatherAtMyLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>